--- a/src/database.properties
+++ b/src/database.properties
@@ -4,6 +4,6 @@
 #password=mysql
 
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql:https://node227054-env-8299127.j.layershift.co.uk/sistema_delivery_simple?serverTimezone=UTC
+url=jdbc:mysql:https:node227054-env-8299127.j.layershift.co.uk/sistema_delivery_simple?serverTimezone=UTC
 username=root
 password=PIOesc13116
